--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -264,7 +264,7 @@
                 <img src="{% static 'whatsapp.png' %}" alt="Whatsapp">
             </a>
             <!-- Brochure Download -->
-            <a href="{% static 'Technowin_Brochure.pdf' %}" class="social-icon brochure" download>
+            <a href="{% static 'TechnoWin_Brochure.pdf' %}" class="social-icon brochure" download>
                 <img src="{% static 'download.png' %}" alt="Download Brochure">
             </a>
         </div>
