--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -20,8 +20,6 @@
 </head>
 <body>
     
-
-    
     <section class="topView" id="topSection">
         <div class="row">
             <div class="col-md-4 text-center">
@@ -318,7 +316,7 @@
                 </video>
                 <p>TechnoWin IT Infra Pvt Ltd has created a user-friendly, responsive web development project 🌐💻. Focused on innovative designs, seamless performance, and secure solutions 🔒, it caters to diverse business needs. Perfect for boosting online presence! 🚀✨</p>
                 <a href="project.html" class="read-more">
-                    <i class="fas fa-arrow-right"></i> Read More
+                     Read More
                 </a>
             </div>
     
@@ -331,7 +329,7 @@
                 </video>
                 <p>TechnoWin IT Infra Pvt Ltd has developed an intuitive, high-performance app 🌟📱. With a focus on sleek design, smooth functionality, and robust security 🔐, it meets the unique needs of businesses. Ideal for enhancing mobile engagement! 🚀📲</p>
                 <a href="project.html" class="read-more">
-                    <i class="fas fa-arrow-right"></i> Read More
+                     Read More
                 </a>
             </div>
     
@@ -344,7 +342,7 @@
                 </video>
                 <p>TechnoWin IT Infra Pvt Ltd offers reliable and scalable cloud services ☁️💼. With seamless integration, high security 🔐, and flexible solutions, it helps businesses optimize their operations and enhance efficiency 🌟. Perfect for driving growth and innovation! 🚀</p>
                 <a href="project.html" class="read-more">
-                    <i class="fas fa-arrow-right"></i> Read More
+                     Read More
                 </a>
             </div>
     
@@ -357,7 +355,7 @@
                 </video>
                 <p>TechnoWin IT Infra Pvt Ltd provides high-quality, durable hardware solutions 🖥️🔧. Designed for optimal performance and reliability, it supports businesses with cutting-edge technology 💡. Perfect for enhancing infrastructure and boosting productivity! 🚀</p>
                 <a href="project.html" class="read-more">
-                    <i class="fas fa-arrow-right"></i> Read More
+                   Read More
                 </a>
             </div>
         </div>
@@ -369,8 +367,166 @@
             </a>
         </div>
     </section>
-    
 
+
+<!-- Our technologies section --> 
+    <section id="technologies">
+        <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: black; text-shadow: 2px 2px 8px rgba(209, 12, 12, 0.4); font-family: 'Arial', sans-serif; letter-spacing: 2px;">
+            <u>Our Technologies</u>
+        </h2>
+        <div class="technology-domains">
+            <!-- First Domain -->
+            <div class="domain" id="domain-one">
+                <h3 class="domain-title">Framework</h3>
+                <div class="sub-domain" id="ai-subdomain1">
+                    <h4>Django</h4>
+                    <img src="{% static 'django.png' %}" alt="ai-technologies 1">
+                    <p>Building neural networks that learn from vast amounts of data.</p>
+                    <a href="project.html" class="read-more1">
+                        Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="ai-subdomain2">
+                    <h4>MVC</h4>
+                    <img src="{% static 'mvc.png' %}" alt="ai-technologies 2">
+                    <p>Enabling computers to understand and interpret human language.</p>
+                    <a href="project.html" class="read-more1">
+                        Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="ai-subdomain3">
+                    <h4>Computer Vision</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="ai-technologies 2">
+                    <p>Creating models that can interpret and understand visual data.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="ai-subdomain4">
+                    <h4>Robotics</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="ai-technologies 4">
+                    <p>Developing autonomous systems with AI to perform real-world tasks.</p>
+                    <a href="project.html" class="read-more1">
+                        Read More
+                    </a>
+                </div>
+            </div>
+    
+            <!-- Second Domain -->
+            <div class="domain" id="domain-two">
+                <h3 class="domain-title">Cloud Computing</h3>
+                <div class="sub-domain" id="cloud-subdomain1">
+                    <h4>Cloud Infrastructure</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="cloud-technologies 1">
+                    <p>Scalable and flexible cloud infrastructure solutions.</p>
+                    <a href="project.html" class="read-more1">
+                       Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="cloud-subdomain2">
+                    <h4>Data Storage</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="cloud-technologies 2">
+                    <p>Secure and reliable storage solutions for data management.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="cloud-subdomain3">
+                    <h4>Serverless Computing</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="cloud-technologies 3">
+                    <p>Optimized cloud solutions with zero infrastructure management.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="cloud-subdomain4">
+                    <h4>Cloud Security</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="cloud-technologies 4">
+                    <p>Protecting your cloud data and applications from cyber threats.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+            </div>
+    
+            <!-- Third Domain -->
+            <div class="domain" id="domain-three">
+                <h3 class="domain-title">Web Development</h3>
+                <div class="sub-domain" id="web-subdomain1">
+                    <h4>Frontend Development</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="web-technologies 1">
+                    <p>Crafting responsive and interactive user interfaces.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="web-subdomain2">
+                    <h4>Backend Development</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="web-technologies 2">
+                    <p>Developing robust and scalable backend systems.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="web-subdomain3">
+                    <h4>Web Security</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="web-technologies 3">
+                    <p>Ensuring the safety and integrity of web applications.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="web-subdomain4">
+                    <h4>Performance Optimization</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="web-technologies 4">
+                    <p>Improving the speed and efficiency of web applications.</p>
+                    <a href="project.html" class="read-more1">
+                        Read More
+                    </a>
+                </div>
+            </div>
+    
+            <!-- Fourth Domain -->
+            <div class="domain" id="domain-four">
+                <h3 class="domain-title">Blockchain Technology</h3>
+                <div class="sub-domain" id="blockchain-subdomain1">
+                    <h4>Smart Contracts</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="blockchain-technologies 1">
+                    <p>Automating and securing agreements through blockchain.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="blockchain-subdomain2">
+                    <h4>Cryptocurrency</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="blockchain-technologies 2">
+                    <p>Building decentralized currencies for financial independence.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="blockchain-subdomain3">
+                    <h4>Decentralized Applications</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="blockchain-technologies 3">
+                    <p>Creating apps that run on a decentralized network.</p>
+                    <a href="project.html" class="read-more1">
+                         Read More
+                    </a>
+                </div>
+                <div class="sub-domain" id="blockchain-subdomain4">
+                    <h4>Blockchain Security</h4>
+                    <img src="{% static 'certificate1.png' %}" alt="blockchain-technologies 4">
+                    <p>Ensuring data privacy and integrity with blockchain technology.</p>
+                    <a href="project.html" class="read-more1">
+                        Read More
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+<!-- Certificate Section -->
 <section class="certificate-slider-section">
     <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: black; text-shadow: 2px 2px 8px rgba(12, 76, 209, 0.4); font-family: 'Arial', sans-serif; letter-spacing: 2px;">Our Certificates</h2>
     <div class="certificate-slider">
